[tool.poetry]
name = "goit-hw-5"
version = "0.1.0"
description = ""
authors = ["Dmytro-Kruhlov <hazzy1451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.6.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
