[tool.poetry]
name = "goit-hw-5"
version = "0.1.0"
description = ""
authors = ["Dmytro-Kruhlov <hazzy1451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.6.1"
requests = "^2.31.0"
websockets = "^11.0.3"
names = "^0.3.0"
aiohttp = "^3.8.5"
aiofile = "^3.8.8"
aiopath = "^0.6.11"
aioshutil = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
